--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wisk</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <h1>Wisk</h1>
+    <h2>A Recipe Ready for You!</h2>
     <input type="text" id="foodName" placeholder="Enter Food name">
     <button onclick="fetchImage()">Fetch Food</button><br>
     
