--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <body>
     <h1>Wisk</h1>
     <h2>A Recipe Ready for You!</h2>
-    <input type="text" id="foodName" placeholder="Enter Food name">
-    <button onclick="fetchImage()">Fetch Food</button><br>
+    <button onclick="goToRecipe()">Go Find Recipes</button><br>
     
-    <img src="" alt="FOOD" id="foodImage" style="display: none">
+    <!-- <img src="" alt="FOOD" id="foodImage" style="display: none"> -->
     
     <script src="index.js"></script>
 </body>
