--- a/homepage.html
+++ b/homepage.html
@@ -155,7 +155,7 @@
             </div>
 
             <!-- Start a New Recipe Button -->
-            <button class="button start-recipe-button" id="startRecipeBtn">Start a New Recipe</button>
+            <button class="button start-recipe-button" id="startRecipeBtn">Find a New Recipe</button>
         </div>
     </div>
 
